# indic-tokenizer

./: .gitignore  BENCHMARK_RESULTS.md  CONTRIBUTING.md  GITHUB_SETUP.md  LICENSE  PRODUCTION_PREVIEW.md  README.md  RESEARCH_GRADE_FEATURES.md  pyproject.toml  requirements.txt
.github/: README.md
configs/: fairness_benchmark.yaml  hi_benchmark.yaml  hi_demo.yaml  hi_full.yaml  morphology_benchmark.yaml
data/: README.md
docs/: 00-vision.md  01-roadmap.md  02-research-survey.md  10-linguistics-devanagari.md  11-linguistics-hindi-morphology.md  12-linguistics-sanskrit-sandhi.md  20-tokenizer-architecture.md  21-training-pipeline.md  22-evaluation-metrics.md  23-datasets-and-licensing.md  30-playground-ui-spec.md  31-corpus-prep-hi.md  31-gpe-prototype-plan.md  32-parity-datasets.md  33-morphology-annotation-hi.md  40-integration-hf-and-llms.md  50-contributing-guidelines.md  99-notes-open-questions.md  BUILD_PLAN.md  DOWNSTREAM_PROXY.md  HANDOFF_TO_INDIA_TEAM.md  HUGGINGFACE_AUTH.md  NAMING_CONFLICT_FIX.md  NAMING_CONFLICT_WORKAROUND.md  PACKAGING_NOTE.md  PROJECT_SPECS.md  QUICK_START.md  RESEARCH_LOOP_SUMMARY.md  RESEARCH_LOOP_WORKFLOW.md  TRAINING_ON_DESKTOP.md  VERIFICATION_CHECKLIST.md
eval/: README.md  __init__.py  fertility.py  grapheme_violations.py  metrics.py
examples/: README.md  basic_comparison.py  evaluate_tokenizer.py
playground/: API_SPEC.md  README.md
scorecards/: README.md
scripts/: __init__.py  benchmark_fairness.py  benchmark_gpe.py  compare_baseline_semantic.py  compare_tokenizers.py  eval_tiny_lm.py  evaluate_downstream.py  evaluate_downstream_task.py  evaluate_morphology.py  evaluate_tokenizers.py  lock_baseline_tokenizer.py  prepare_corpus_hi.py  prepare_hindi_corpus.py  prepare_parity_hi_en.py  run_baseline_evaluation.py  run_benchmark.py  run_full_evaluation.py  run_morphology_eval.py  run_parity_benchmark.py  run_semantic_evaluation.py  setup_hf_auth.py  (+8 more)
(+72 files in other folders)
